force-app/main/default/objects/Analytics_Snapshot__c/Analytics_Snapshot__c.object-meta.xml
<CustomObject>
    <description>Stores periodic analytics snapshots for employee performance reporting.</description>
    <label>Analytics Snapshot</label>
    <nameField>
        <displayFormat>AS-{0000}</displayFormat>
        <label>Snapshot Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Analytics Snapshots</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>