force-app/main/default/objects/Analytics_Snapshot__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Employee resource for this analytics snapshot</description>
    <inlineHelpText>Select the employee</inlineHelpText>
    <label>Employee</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Analytics Snapshots</relationshipLabel>
    <relationshipName>Analytics_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>