force-app/main/default/objects/Analytics_Snapshot__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <description>The time period this snapshot covers</description>
    <label>Period</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
                <default>true</default>
                <label>Weekly</label>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>