force-app/main/default/objects/Analytics_Snapshot__c/fields/Utilization_Rate__c.field-meta.xml
<CustomField>
    <fullName>Utilization_Rate__c</fullName>
    <description>Billable hours as a percentage of total hours</description>
    <label>Utilization Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>